vista administracion terminada

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 			<img src="./src/img/contenedor-marron.png" alt="Contenedor Marron" class="contenedor basura-organica" id="contenedor-inferior-izquierda">
 			<img src="./src/img/contenedor-verde.png" alt="Contenedor Verde" class="contenedor basura-vidrio" id="contenedor-inferior-derecha">
 		</div>
-		<div class="vistas" id="vista-clasificaciones">
+		<div class="vistas" id="vista-clasificaciones" style="display: none;">
 			<main id="contenido-ranking">
 				<div id="header">
 				  <h1>Ranking</h1>
@@ -127,7 +127,15 @@
 					<button class="exit">Salir</button>
 				  </div>
 				</div>
-			  </main>
+			</main>
+		</div>
+		<div class="vistas" id="vista-opciones-administrador">
+			<div class="contenido-vistas">
+				<h1 id="header-administracion">Panel Administracion</h1>
+				<button id="btn-configuracion-parametros">Parametros Juego</button>
+				<button id="btn-configuracion-pool">Banco de Imagenes</button>
+				<button id="btn-volver">Volver</button>
+			</div>
 		</div>
     </body>
 </html>
