--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 		<link rel="stylesheet" href="../src/css/style_guille_client.css">
 		<title>Trash Invaders</title>
 	</head>
-	<body>	  
+	<body>	 
 		<div id="vista-principal"> <!--Terminada ✅-->
 			<main id="landing-page">
 				<div class="div-superior">
@@ -174,7 +174,7 @@
 				<button id="volvermenu" ><a href="menup.html">MENU</a></button>
 			</main>
 		</div>
-		<div id="vista-opciones-administrador">
+		<div id="vista-opciones-administrador"> <!--Terminada ✅-->
 			<main id="register-page">
 				<div class="div-superior">
 					<label><h1>Administrador</h1></label>
@@ -289,7 +289,7 @@
 				<button id="button-volver-agregar-mejora">Volver</button>
 			</main>
 		</div>
-		<div id="vista-rankings">
+		<div id="vista-rankings"> <!--Terminada ✅-->
 			<main id="register-page">
 				<div class="div-superior">
 					<h1>RANKINGS</h1>
