--- a/test/index.html
+++ b/test/index.html
@@ -1,6 +1,6 @@
 <!-- FILEPATH: /c:/xampp/htdocs/projects/2324_2DAW_TRASH_INVADERS/test/index.html -->
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
