--- a/test/logicaJuego/index.html
+++ b/test/logicaJuego/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=1280, height=720, initial-scale=1">
