media query menu principal

--- a/index.html
+++ b/index.html
@@ -132,9 +132,9 @@
 		</div>
 		<div class="vistas" id="vista-opciones-administrador">
 			<div class="contenido-vistas" id="opciones-administrador">
-				<h1 id="header-administracion">Panel Administracion</h1>
-				<button id="btn-configuracion-parametros">Parametros Juego</button>
-				<button id="btn-configuracion-pool">Banco de Imagenes</button>
+				<h1 id="header-administracion">Administracion</h1>
+				<button id="btn-configuracion-parametros">Parametros</button>
+				<button id="btn-configuracion-pool">Imagenes</button>
 				<button id="btn-volver">Volver</button>
 			</div>
 		</div>
